{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 16,
  "lineage": "e7a238d5-3eee-7915-6eaf-6087c83a4365",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ca3webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:122609731959:instance/i-064a08aed53643707",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064a08aed53643707",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-027a056126570e4f2",
            "private_dns": "ip-10-1-1-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.68",
            "public_ip": "34.207.230.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c379bc93efbf5be7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb0a8149cee31675",
            "tags": {
              "Name": "CA3 Web Server 1"
            },
            "tags_all": {
              "Name": "CA3 Web Server 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036ad008e0004895d"
            ]
          },
          "dependencies": [
            "aws_security_group.ca3-sg",
            "aws_subnet.ca3-subnet-1",
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ca3webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:122609731959:instance/i-09f9bb5c35fb876c8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f9bb5c35fb876c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0094f3d348f43e64a",
            "private_dns": "ip-10-1-2-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.35",
            "public_ip": "34.234.175.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-066938f71356ea755",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0628fedbdbc2b09d0",
            "tags": {
              "Name": "CA3 Web Server 2"
            },
            "tags_all": {
              "Name": "CA3 Web Server 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036ad008e0004895d"
            ]
          },
          "dependencies": [
            "aws_security_group.ca3-sg",
            "aws_subnet.ca3-subnet-2",
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ca3igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:internet-gateway/igw-094e9118447408e93",
            "id": "igw-094e9118447408e93",
            "owner_id": "122609731959",
            "tags": {
              "Name": "ca3IGW"
            },
            "tags_all": {
              "Name": "ca3IGW"
            },
            "vpc_id": "vpc-07d3c318042e3bcd4"
          },
          "dependencies": [
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:loadbalancer/app/External-LB/ee130ec65eba470c",
            "arn_suffix": "app/External-LB/ee130ec65eba470c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "External-LB-1481635736.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:122609731959:loadbalancer/app/External-LB/ee130ec65eba470c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "External-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-036ad008e0004895d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0628fedbdbc2b09d0"
              },
              {
                "subnet_id": "subnet-0cb0a8149cee31675"
              }
            ],
            "subnets": [
              "subnet-0628fedbdbc2b09d0",
              "subnet-0cb0a8149cee31675"
            ],
            "vpc_id": "vpc-07d3c318042e3bcd4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ca3-sg",
            "aws_subnet.ca3-subnet-1",
            "aws_subnet.ca3-subnet-2",
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:listener/app/External-LB/ee130ec65eba470c/e8ea04c59c7d9a6a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/2123bd329f332e51",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:122609731959:listener/app/External-LB/ee130ec65eba470c/e8ea04c59c7d9a6a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:loadbalancer/app/External-LB/ee130ec65eba470c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external-elb",
            "aws_lb_target_group.external-elb",
            "aws_security_group.ca3-sg",
            "aws_subnet.ca3-subnet-1",
            "aws_subnet.ca3-subnet-2",
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/2123bd329f332e51",
            "arn_suffix": "targetgroup/ALB-TG/2123bd329f332e51",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/2123bd329f332e51",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07d3c318042e3bcd4"
          },
          "dependencies": [
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-elb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/2123bd329f332e51-20230421101317413300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/2123bd329f332e51",
            "target_id": "i-064a08aed53643707"
          },
          "dependencies": [
            "aws_instance.ca3webserver1",
            "aws_lb_target_group.external-elb",
            "aws_security_group.ca3-sg",
            "aws_subnet.ca3-subnet-1",
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-elb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/2123bd329f332e51-20230421101306485300000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:122609731959:targetgroup/ALB-TG/2123bd329f332e51",
            "target_id": "i-09f9bb5c35fb876c8"
          },
          "dependencies": [
            "aws_instance.ca3webserver2",
            "aws_lb_target_group.external-elb",
            "aws_security_group.ca3-sg",
            "aws_subnet.ca3-subnet-2",
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ca3-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:route-table/rtb-068ad0d97a8d309b3",
            "id": "rtb-068ad0d97a8d309b3",
            "owner_id": "122609731959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094e9118447408e93",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ca3RT"
            },
            "tags_all": {
              "Name": "ca3RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d3c318042e3bcd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ca3igw",
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f6e6f79c47dd93e",
            "route_table_id": "rtb-068ad0d97a8d309b3",
            "subnet_id": "subnet-0cb0a8149cee31675"
          },
          "dependencies": [
            "aws_internet_gateway.ca3igw",
            "aws_route_table.ca3-rt",
            "aws_subnet.ca3-subnet-1",
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083f8e760b99c1066",
            "route_table_id": "rtb-068ad0d97a8d309b3",
            "subnet_id": "subnet-0628fedbdbc2b09d0"
          },
          "dependencies": [
            "aws_internet_gateway.ca3igw",
            "aws_route_table.ca3-rt",
            "aws_subnet.ca3-subnet-2",
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ca3-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:security-group/sg-036ad008e0004895d",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036ad008e0004895d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ca3-SG",
            "name_prefix": "",
            "owner_id": "122609731959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-SG"
            },
            "tags_all": {
              "Name": "Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d3c318042e3bcd4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ca3-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:subnet/subnet-0cb0a8149cee31675",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb0a8149cee31675",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122609731959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ca3-subnet-1a"
            },
            "tags_all": {
              "Name": "ca3-subnet-1a"
            },
            "vpc_id": "vpc-07d3c318042e3bcd4"
          },
          "dependencies": [
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ca3-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:subnet/subnet-0628fedbdbc2b09d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0628fedbdbc2b09d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122609731959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ca3-subnet-1b"
            },
            "tags_all": {
              "Name": "ca3-subnet-1b"
            },
            "vpc_id": "vpc-07d3c318042e3bcd4"
          },
          "dependencies": [
            "aws_vpc.ca3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ca3-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122609731959:vpc/vpc-07d3c318042e3bcd4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0493e15938875ec9a",
            "default_route_table_id": "rtb-021c6cc4345a7c81e",
            "default_security_group_id": "sg-0d32ad87565c78c3e",
            "dhcp_options_id": "dopt-0bbe275d262330386",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d3c318042e3bcd4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021c6cc4345a7c81e",
            "owner_id": "122609731959",
            "tags": {
              "Name": "ca3VPC"
            },
            "tags_all": {
              "Name": "ca3VPC"
            }
          }
        }
      ]
    }
  ]
}